# tree-sitter-mlx

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  package-lock.json  package.json  setup.py
.github/workflows/: ci.yml  fuzz.yml
bindings/c/: tree-sitter-ocaml_interface.h  tree-sitter-ocaml_interface.pc.in  tree-sitter-ocaml_type.h  tree-sitter-ocaml_type.pc.in
bindings/go/: binding_interface.go  binding_ocaml.go  binding_type.go
bindings/node/: index.js
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOCaml/: ocaml.h
bindings/swift/TreeSitterOCamlInterface/: ocaml_interface.h
bindings/swift/TreeSitterOCamlType/: ocaml_type.h
common/: common.mak  scanner.h
grammars/mlx/: grammar.js
grammars/mlx/src/: grammar.json  node-types.json  scanner.c
ocaml/: Makefile
ocaml_interface/: Makefile
ocaml_type/: Makefile
ocaml_type/src/: scanner.c
