[package]
name = "tree-sitter-ocaml"
description = "OCaml grammar for tree-sitter"
version = "0.22.0"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "ocaml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ocaml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "ocaml/grammar.js",
  "ocaml/src",
  "ocaml_interface/grammar.js",
  "ocaml_interface/src",
  "ocaml_type/grammar.js",
  "ocaml_type/src",
  "queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.98"
